<resources>
    <string name="app_name">FinalAssignmentAndroid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="address_placeholder">78 Warden Avenue , Toronto , Ontario</string>
    <string name="city_placeholder">Toronto</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_the_marker">Update the marker</string>
    <string name="enter_the_city">Enter the city</string>
    <string name="enter_the_address">Enter the Address</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
</resources>