<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_the_marker"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/et_city"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_the_city"
            android:minHeight="50dp"
            android:paddingHorizontal="5dp"/>





<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:id="@+id/et_address"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:hint="@string/enter_the_address"-->
<!--            android:inputType="text"-->
<!--            android:minHeight="50dp"-->
<!--            android:paddingHorizontal="5dp"/>-->
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_update_dialog"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ABDA03"
            android:text="@string/update"/>




    </LinearLayout>

</LinearLayout>