<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsViewMarker">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="200dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/detail_city"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/city_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="900"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/change_city_btn"
                android:text="@string/change"
                android:textSize="20sp"
                android:textColor="@color/teal_700"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/detail_address"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:text="@string/address_placeholder"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textFontWeight="900"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/change_address_btn"
                android:text="@string/change"
                android:textSize="20sp"
                android:textColor="@color/teal_700"
                />


        </LinearLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            tools:context=".MapsActivity" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/isVisited_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/check" />

</RelativeLayout>